test/resources/parser/failing/ValOperand.scala
object V {
    1 + val x: Int = 2;
    x
}